--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" href="/style.css">
+<link rel="stylesheet" href="style.css">
 <title>CSS Bayan</title>
 </head>
 <body>
 
 <ul>
-    <li><p>I undertsand nothing</p><img class="icon expand" src="./images/plus.svg" alt="icon" width="64px" height="64px"><img class="icons collapse" src="./images/minus.svg" alt="icon" width="64px" height="64px">
+    <li><p>I undertsand nothing</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon">
     <img class="images" src="./images/meme_1.png" alt="I understand nothing">
     </li>
-    <li><p>You matter, don't give up</p><img class="icons expand" src="./images/plus.svg" alt="icon" width="64px" height="64px"><img class="icons collapse" src="./images/minus.svg" alt="icon" width="64px" height="64px">
+    <li><p>You matter, don't give up</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon">
     <img class="images" src="./images/meme_2.png" alt="You matter, don't give up">
     </li>
-    <li><p>How do you persimmon?</p><img class="icons expand" src="./images/plus.svg" alt="icon" width="64px" height="64px"><img class="icons collapse" src="./images/minus.svg" alt="icon" width="64px" height="64px">
+    <li><p>How do you persimmon?</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon">
     <img class="images" src="./images/meme_3.png" alt="How do you persimmon">
     </li>
-    <li><p>The end</p><img class="icons expand" src="./images/plus.svg" alt="icon" width="64px" height="64px"><img class="icons collapse" src="./images/minus.svg" alt="icon" width="64px" height="64px">
+    <li><p>The end</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon">
     <img class="images" src="./images/meme_4.png" alt="The end">
     </li>
 </ul>
