feat: fill style.css file (Sat, Mar 12, 2023, 21:32)

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
 </head>
 <body>
 
-<ul>
-    <li><p>I undertsand nothing</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon">
+<div>
+    <a class="hovered" href=""><span class="row"><p>I undertsand nothing</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon"></span>
     <img class="images" src="./images/meme_1.png" alt="I understand nothing">
-    </li>
-    <li><p>You matter, don't give up</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon">
+    </a>
+    <a class="hovered" href="''"><p>You matter, don't give up<img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon"></p>
     <img class="images" src="./images/meme_2.png" alt="You matter, don't give up">
-    </li>
-    <li><p>How do you persimmon?</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon">
+    </a>
+    <a class="hovered" a=""><p>How do you persimmon?<img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon"></p>
     <img class="images" src="./images/meme_3.png" alt="How do you persimmon">
-    </li>
-    <li><p>The end</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon">
+    </div>
+    <a class="hovered" href=""><p>The end<img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon"></p> 
     <img class="images" src="./images/meme_4.png" alt="The end">
-    </li>
-</ul>
+    </a>
+</div>
 
 </body>
 </html>
