--- a/cssBayan/index.html
+++ b/cssBayan/index.html
@@ -8,10 +8,10 @@
 
 <div>
     <a class="hovered" href=""><span class="row"><p>I undertsand nothing</p><img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon"></span>
-    <img class="images" src="./images/meme_1.png" alt="I understand nothing">
+    <img class="images" src="./images/meme_1.PNG" alt="I understand nothing">
     </a>
     <a class="hovered" href="''"><p>You matter, don't give up<img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon"></p>
-    <img class="images" src="./images/meme_2.png" alt="You matter, don't give up">
+    <img class="images" src="./images/meme_2.PNG" alt="You matter, don't give up">
     </a>
     <a class="hovered" a=""><p>How do you persimmon?<img class="icons expand" src="./images/plus.svg" alt="icon"><img class="icons collapse" src="./images/minus.svg" alt="icon"></p>
     <img class="images" src="./images/meme_3.png" alt="How do you persimmon">
